bug: fixed salary display to only hide on mobile

--- a/client/src/components/SalaryComponent/styles.scss
+++ b/client/src/components/SalaryComponent/styles.scss
@@ -9,7 +9,11 @@
 }
 
 .salary-container {
-  display: none !important
+
+  @include for-mobile {
+    display: none !important;
+  }
+  
 }
 
 .salary-body {
